# hiloop-python

./: CONTRIBUTING.md  README.md
src/: README.md  pyproject.toml
src/hiloop/: __init__.py  sandbox.py  sse.py
src/hiloop/api/agent_service/: agent_service_create_agent.py  agent_service_get_agent.py  agent_service_list_agents.py  agent_service_set_agent_launch_acl.py
src/hiloop/api/annotation_schema_service/: annotation_schema_service_archive_annotation_schema.py  annotation_schema_service_get_annotation_schema.py  annotation_schema_service_list_annotation_schemas.py  annotation_schema_service_register_annotation_schema.py
src/hiloop/models/: __init__.py  acquire_lease_request.py  acquire_lease_response.py  agent.py  agent_launch_acl.py  agent_launch_acl_policy.py  annotate_range_request.py  annotate_request.py  annotate_response.py  annotation_schema.py  archive_annotation_schema_request.py  archive_annotation_schema_response.py  artifact.py  attach_volume_request.py  attach_volume_response.py  attribute_value.py  binding_impact.py  branch_diff_request.py  branch_diff_response.py  branch_diff_response_rows_item.py  branch_diff_spec.py  branch_hlc.py  build_artifact_image.py  calculation.py  calculation_op.py  capability.py  capability_requirement.py  capture_spec.py  capture_spec_policy.py  clamped_entry.py  command_spec.py  command_spec_env.py  complete_run_request.py  complete_run_response.py  create_agent_request.py  create_agent_response.py  create_feedback_request.py  create_feedback_response.py  create_project_request.py  create_project_response.py  (+224 more)
(+89 files in other folders)
